; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_utils.c_do_all_continuations.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_utils.c_do_all_continuations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.continuation = type { %struct.continuation*, i32, i32 (i32)* }

@cmd_continuation = common dso_local global %struct.continuation* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_all_continuations() #0 {
  %1 = alloca %struct.continuation*, align 8
  %2 = alloca %struct.continuation*, align 8
  %3 = load %struct.continuation*, %struct.continuation** @cmd_continuation, align 8
  store %struct.continuation* %3, %struct.continuation** %1, align 8
  store %struct.continuation* null, %struct.continuation** @cmd_continuation, align 8
  br label %4

4:                                                ; preds = %7, %0
  %5 = load %struct.continuation*, %struct.continuation** %1, align 8
  %6 = icmp ne %struct.continuation* %5, null
  br i1 %6, label %7, label %21

7:                                                ; preds = %4
  %8 = load %struct.continuation*, %struct.continuation** %1, align 8
  %9 = getelementptr inbounds %struct.continuation, %struct.continuation* %8, i32 0, i32 2
  %10 = load i32 (i32)*, i32 (i32)** %9, align 8
  %11 = load %struct.continuation*, %struct.continuation** %1, align 8
  %12 = getelementptr inbounds %struct.continuation, %struct.continuation* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 %10(i32 %13)
  %15 = load %struct.continuation*, %struct.continuation** %1, align 8
  store %struct.continuation* %15, %struct.continuation** %2, align 8
  %16 = load %struct.continuation*, %struct.continuation** %1, align 8
  %17 = getelementptr inbounds %struct.continuation, %struct.continuation* %16, i32 0, i32 0
  %18 = load %struct.continuation*, %struct.continuation** %17, align 8
  store %struct.continuation* %18, %struct.continuation** %1, align 8
  %19 = load %struct.continuation*, %struct.continuation** %2, align 8
  %20 = call i32 @xfree(%struct.continuation* %19)
  br label %4

21:                                               ; preds = %4
  ret void
}

declare dso_local i32 @xfree(%struct.continuation*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
